# tauri-react-template

./: README.md  biome.jsonc  index.html  lefthook.yml  minisign.key  minisign.pub  package.json  pnpm-lock.yaml
.github/workflows/: cicd.yml
docs/: updater-guide.md
scripts/: package-updater.sh
src/: App.tsx  app.tsx  global.css  router.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: app-shell.tsx  mode-toggle.tsx  theme-provider.tsx
src/components/ui/: alert.tsx  dialog.tsx  drawer.tsx  dropdown-menu.tsx  input-otp.tsx  input.tsx  label.tsx  menubar.tsx  textarea.tsx
src/features/built-with/: index.tsx
src/features/dialog-demo/: index.tsx
src/features/github-star-button/: index.tsx
src/routes/: home.tsx
